--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/components/Hero/Hero.jsx"
+    "app/components/Hero/Hero.jsx",
+    "app/components/About/About.jsx"
   ],
   "exclude": ["node_modules"]
 }
